# mcdc

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CITATION.cff  Dockerfile  README.md  docker-compose.yml  extract.py  install.sh  pyproject.toml  test.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general.md  question.md
.github/PULL_REQUEST_TEMPLATE/: general.md
.github/workflows/: black_lint.yml  check_citation.yml  docker.yml  docs_test.yml  draft-pdf.yml  manual_publish.yml  mark_stale_issues.yml  publish-pypi.yml  python-publish.yml  regression_test-gpu.yml  regression_test-numba_gpu.yml  regression_test.yml  stale-issues.yml  unit_test.yml
containers/: Dockerfile  Dockerfile.rocm  README.md  docker-compose.yml  mcdc-cpu.def  mcdc-cuda.def  mcdc-rocm.def
docs/source/: citation.rst  conf.py  index.rst  install.rst  publications.rst
examples/fuel_array_packaged/: input.py  process-output.py
examples/kobayashi/: input.py  process-output.py
examples/kobayashi-TD/: input.py  process-output.py
examples/moving_pellet/: input.py  process-output.py
examples/moving_source/: input.py  process-output.py
examples/pincell/: input.py
examples/proton_beam/: input_10.py  input_1MeV.py  process.py  test.py
examples/slab_sens/: input.py
examples/sphere_in_cube/: input.py  process-output.py
llm_agent/: README.md  build_index.py  generate_docs.py  requirements.txt  scrape_api.py  utils.py
llm_agent/onboarding/: agent.py  batch_executor.py  concepts.py  debugger.py  decomposer.py  material_properties.csv  mcdc_api_reference.md  nuclear_data.csv  patterns.py  plot_generator.py  script_builder.py  tools.py  validator.py  visualizer.py
mcdc/: .gitignore  __init__.py  adapt.py  card.py  code_factory.py  config.py  constant.py  data_container.py  data_processor.py  data_sampler.py  element.py  generate_mcdc_get.py  global_.py  input_.py  kernel.py  kernel_new.py  loop.py  loop_new.py  main.py  main_new.py  material.py  nuclide.py  numba_types.py  objects.py  output.py  print_.py  prints.py  pyproject.toml  reaction.py  rng.py  settings.py  simulation.py  tally.py  type_.py  util.py  visualize.py
mcdc-vv/: run.py
mcdc/.github/: pull_request_template.md
mcdc/code_factory/: adapt.py  array_return.py  code_factory.py  gpu.py  jit.py  literals_generator.py  numba_objects_generator.py  util.py
mcdc/containers/: Dockerfile.cuda
mcdc/geometry/: __init__.py  common.py  interface.py
mcdc/iqmc/: iqmc_kernel.py  iqmc_loop.py
mcdc/mcdc/: constant.py
mcdc/mcdc_get/: README.md  __init__.py  cell.py  elastic_scattering_reaction.py  electron_ionization_reaction.py  electron_reaction.py  element.py  fission_reaction.py  forced_collisions.py  kalbach_mann_distribution.py  material.py  multi_table_distribution.py  multigroup_material.py  multipdf.py  native_material.py  nbody_distribution.py  neutron_elastic_scattering_reaction.py  neutron_fission.py  neutron_inelastic_scattering_reaction.py  neutron_reaction.py  nuclide.py  particle.py  polynomial.py  polynomial_data.py  proton_inelastic_scattering_reaction.py  proton_nonelastic_reaction.py  proton_reaction.py  reaction.py  settings.py  simulation.py  structured_mesh.py  surface.py  table.py  table_data.py  tabulated_distribution.py  tabulated_energy_angle_distribution.py  tally.py  universe.py  weight_windows.py
mcdc/mcdc_set/: __init__.py  cell.py  electron_ionization_reaction.py  element.py  forced_collisions.py  multi_table_distribution.py  multigroup_material.py  native_material.py  nbody_distribution.py  neutron_inelastic_scattering_reaction.py  neutron_reaction.py  nuclide.py  polynomial_data.py  proton_inelastic_scattering_reaction.py  proton_nonelastic_reaction.py  proton_reaction.py  settings.py  source.py  structured_mesh.py  surface.py  table_data.py  tabulated_distribution.py  tabulated_energy_angle_distribution.py  tally.py  universe.py  weight_windows.py
mcdc/object_/: base.py  cell.py  data.py  distribution.py  electron_reaction.py  element.py  gpu_tools.py  material.py  mesh.py  neutron_reaction.py  nuclide.py  particle.py  proton_reaction.py  reaction.py  settings.py  simulation.py  source.py  surface.py  tally.py  technique.py  universe.py  util.py
mcdc/physics/: __init__.py  analog.py  common.py  elemental.py  interface.py  native.py  neutron.py  neutron_reaction.py  util.py
mcdc/src/: algorithm.py  geometry.py  physics.py
mcdc/transport/: .gitignore  __init__.py  data.py  distribution.py  literals.py  mpi.py  particle.py  particle_bank.py  rng.py  sensitivity.py  simulation.py  source.py  technique.py  util.py
test/: conftest.py
test/regression/: .gitignore  conftest.py  dummy_nuclide_3.h5  dummy_nuclide_4.h5  revise_canon.py  run.py  test_regression.py
test/unit/: conftest.py  run.py  (+1 more)
(+409 files in other folders)
