[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "mcdc"
dynamic = ["version"]

authors = [
  { name = "MC/DC Development Team" },
]

maintainers = [
  { name = "Ilham Variansyah", email = "variansi@oregonstate.edu" },
  { name = "Joanna Piper Morgan", email = "morgan83@llnl.gov" },
  { name = "Melek Derman", email = "dermanm@oregonstate.edu" },
  { name = "Nathan Glaser", email = "glaserna@oregonstate.edu" },
  { name = "Massimo Larsen", email = "larsemas@oregonstate.edu" },
  { name = "Braxton Cuneo", email = "bcuneo@seattleu.edu" },
  { name = "Kyle E. Niemeyer", email = "kyle.niemeyer@oregonstate.edu" },
  { name = "Madicken Munk", email = "madicken.munk@oregonstate.edu" },
]

description = "A performant, scalable, and machine-portable Monte Carlo radiation transport code."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

keywords = [
  "monte carlo",
  "radiation transport",
  "neutron transport",
  "high-performance computing",
  "hpc",
  "gpu",
  "numba",
  "mpi",
]

classifiers = [
  "Development Status :: 4 - Beta",

  "Intended Audience :: Science/Research",

  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",

  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",

  "License :: OSI Approved :: BSD License",

  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",

  "Natural Language :: English",

  "Typing :: Typed",
]

dependencies = [
  "numba>=0.60.0",
  "numpy>=2.0.0",
  "scipy",
  "matplotlib",
  "mpi4py>=3.1.4",
  "h5py",
  "colorama",
  "sympy",
]

[project.optional-dependencies]
docs = [
  "sphinx==7.2.6",
  "furo",
  "sphinx_toolbox",
]

dev = [
  "black",
  "pre-commit",
  "pytest",
]

[project.urls]
Homepage = "https://mcdc.readthedocs.io/"
Documentation = "https://mcdc.readthedocs.io/"
Repository = "https://github.com/mcdc-project/mcdc"
Issues = "https://github.com/mcdc-project/mcdc/issues"
"Release Notes" = "https://github.com/mcdc-project/mcdc/releases"

[tool.hatch.version]
source = "vcs"

[tool.black]
force-exclude = '''
(
  mcdc/numba_types\.py
  | mcdc/mcdc_get/
  | mcdc/mcdc_set/
)
'''
